[package]
name = "websocket"
version = "0.1.0"
authors = ["kauly <kauly@hotmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.31.6", features = ["binstart"] }
esp-idf-hal = "0.38.1"
esp-idf-svc = { version = "0.42.3", features = ["experimental"] }
embedded-hal = "0.2.7"
embedded-svc = { version = "0.22.1" }
anyhow = "1"
toml-cfg = "0.1.3"

[build-dependencies]
embuild = "0.29"
anyhow = "1"
